[gd_scene load_steps=6 format=3 uid="uid://v28fl02ldx7d"]

[ext_resource type="Texture2D" uid="uid://kbsgsh26kg0j" path="res://Background/GrassBackground.png" id="1_ddino"]
[ext_resource type="Script" path="res://Background/baggrund.gd" id="1_l100i"]
[ext_resource type="PackedScene" uid="uid://crmpw820snie8" path="res://House/House.tscn" id="2_hqwx3"]
[ext_resource type="PackedScene" uid="uid://buygwb8fxgps5" path="res://Tree/Tree.tscn" id="3_eikhh"]
[ext_resource type="PackedScene" uid="uid://nrkc8icjpdmw" path="res://Bulldozer/spawnpoint.tscn" id="5_1apwd"]

[node name="Baggrund" type="Node2D"]
script = ExtResource("1_l100i")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(575, 324)
scale = Vector2(17.9688, 10.125)
texture = ExtResource("1_ddino")

[node name="House" parent="." instance=ExtResource("2_hqwx3")]
position = Vector2(562, 319)

[node name="Tree" parent="." instance=ExtResource("3_eikhh")]
position = Vector2(366, 344)

[node name="SpawnRoot" type="Node2D" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Bulldozer/bulldozer.tscn")
spawn_path = NodePath("../SpawnRoot")

[node name="Spawnpoint" parent="." instance=ExtResource("5_1apwd")]
position = Vector2(563, 42)

[node name="Spawnpoint2" parent="." instance=ExtResource("5_1apwd")]
position = Vector2(1106, 339)

[node name="Spawnpoint3" parent="." instance=ExtResource("5_1apwd")]
position = Vector2(558, 607)

[node name="Spawnpoint4" parent="." instance=ExtResource("5_1apwd")]
position = Vector2(46.0001, 338)

[connection signal="input_event" from="Spawnpoint/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="Spawnpoint2/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="Spawnpoint3/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="Spawnpoint4/Area2D" to="." method="_on_area_2d_input_event"]

[editable path="Spawnpoint"]
[editable path="Spawnpoint2"]
[editable path="Spawnpoint3"]
[editable path="Spawnpoint4"]
